--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Mrlion",
   "license": "Apache-2.0",
   "dependencies": {
+    "commandkit": "^0.1.10",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5"
   },
