--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "node .",
     "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "prettier-watch": "onchange 'src/**/*.ts' -- prettier --write {{changed}}"
+    "prettier-watch": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
+    "eslint": "npx eslint src/**"
   },
   "keywords": [],
   "author": "Mrlion",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^20.11.24",
     "eslint": "^8.57.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "onchange": "^7.1.0",
     "prettier": "^3.2.5",
     "tsx": "^4.7.1"
