--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discord-bot",
+  "name": "lion-bot",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Mrlion, Underctrl (Command Handler)",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.7.1",
