--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3",
-    "nodemon": "^3.1.0"
+    "dotenv": "^16.0.3"
   }
 }
